
== 2025.07.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1401[#1401]: Privacy option not working properly
* https://github.com/devonfw/IDEasy/issues/1400[#1400]: ide --offline status does not replicate ide status behavior when offline
* https://github.com/devonfw/IDEasy/issues/742[#742]: Produce constructive warning if git repo url is not sane

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/30?closed=1[milestone 2025.07.001].

== 2025.06.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1346[#1346]: ide upgrade throws exception when offline
* https://github.com/devonfw/IDEasy/issues/1133[#1133]: Version autocomplete with full list displays files too
* https://github.com/devonfw/IDEasy/issues/1372[#1372]: Add gradlew support
* https://github.com/devonfw/IDEasy/issues/1304[#1304]: Error when reinstalling vscode
* https://github.com/devonfw/IDEasy/issues/1160[#1160]: Print IDEasy version in ide status when offline
* https://github.com/devonfw/IDEasy/issues/901[#901]: Consider maven wrapper mvnw
* https://github.com/devonfw/IDEasy/issues/1303[#1303]: Add option to show GPDR compliant console output
* https://github.com/devonfw/IDEasy/issues/1309[#1309]: ide.bat splitting short options
* https://github.com/devonfw/IDEasy/issues/1361[#1361]: ide create does not install intellij plugins properly
* https://github.com/devonfw/IDEasy/issues/1340[#1340]: IDEasy does not warn user if IDE_ROOT is not sane
* https://github.com/devonfw/IDEasy/issues/1354[#1354]: Add GRADLE_USER_HOME to gradle
* https://github.com/devonfw/IDEasy/issues/1292[#1292]: ability to add welcome message

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/29?closed=1[milestone 2025.06.002].

== 2025.06.001

Release with new features and bugfixes:
