@@ -59,7 +59,7 @@ public class MvnArtifactTest extends Assertions {
         "com/devonfw/tools/IDEasy/ide-cli/2025.01.003-beta-SNAPSHOT/ide-cli-2025.01.003-beta-20250130.023001-3-windows-x64.tar.gz");
     assertThat(artifact).hasToString("com.devonfw.tools.IDEasy:ide-cli:2025.01.003-beta-20250130.023001-3:tar.gz:windows-x64");
     assertThat(artifact.getDownloadUrl()).isEqualTo(
-        "https://s01.oss.sonatype.org/content/repositories/snapshots/com/devonfw/tools/IDEasy/ide-cli/2025.01.003-beta-SNAPSHOT/ide-cli-2025.01.003-beta-20250130.023001-3-windows-x64.tar.gz");
+        "https://central.sonatype.com/repository/maven-snapshots/com/devonfw/tools/IDEasy/ide-cli/2025.01.003-beta-SNAPSHOT/ide-cli-2025.01.003-beta-20250130.023001-3-windows-x64.tar.gz");
     assertThat(artifact.getKey()).isEqualTo(artifact.toString());
     assertThat(artifact).isEqualTo(equal);
     assertThat(artifact.hashCode()).isEqualTo(equal.hashCode());
@@ -118,7 +118,7 @@ public class MvnArtifactTest extends Assertions {
     assertThat(artifact).hasToString("org.apache.maven.plugins:maven-clean-plugin:*-SNAPSHOT:xml");
     assertThat(artifact.getKey()).isEqualTo(artifact.toString());
     assertThat(artifact.getDownloadUrl()).isEqualTo(
-        "https://s01.oss.sonatype.org/content/repositories/snapshots/org/apache/maven/plugins/maven-clean-plugin/maven-metadata.xml");
+        "https://central.sonatype.com/repository/maven-snapshots/org/apache/maven/plugins/maven-clean-plugin/maven-metadata.xml");
     assertThat(artifact).isEqualTo(equal);
     assertThat(artifact.hashCode()).isEqualTo(equal.hashCode());
   }
