@@ -4,84 +4,23 @@
     To change it edit conf/ide.properties -->
   <localRepository>${env.M2_REPO}</localRepository>
 
-  <!-- 
-   ATTENTION: 
-   Never ever hardcode passwords as plain text!!!
-   Instead simply use variables in angled brackets prefixed with dollar sign.
-   Then devonfw-ide will automatically promt for these variables, encrypt their value and fill it into the placeholder.
-   In case you want to do it manually follow this guide:
-   https://maven.apache.org/guides/mini/guide-encryption.html
-   devonfw-ide already generates settings-security.xml for you
-   so all you need to do is call:
-     mvn -ep
-   hit return and then type your password (do not supply as argument as otherwise it will be saved to the history of your shell)
-   Then copy the encrypted password as according password to this settings.xml
-   -->
-<servers>
-   <server>
-     <id>repository</id>
-     <username>${env.USERNAME}</username>
-     <password>$[mavenRepoPassword]</password>
-   </server>
- </servers>
-
-  <!--
-  <mirrors>
-    <mirror>
-      <id>nexus.central</id>
-      <mirrorOf>central</mirrorOf>
-      <name>central-mirror</name>
-      <url>https://my-production-line.s2-eu.capgemini.com/nexus3/repository/public</url>
-    </mirror>
-  </mirrors>
-  -->
+  <servers>
+    <server>
+      <id>repository</id>
+      <username>${env.USERNAME}</username>
+      <password>$[mavenRepoPassword]</password>
+    </server>
+  </servers>
 
   <profiles>
     <profile>
       <id>devonfw-ide</id>
       <activation>
-        <activeByDefault>true</activeByDefault> 
+        <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <!--
         <sonar.host.url>http://localhost:9000/</sonar.host.url>
-        <sonar.login>${USER}</sonar.login>
-        <sonar.password>TODO</sonar.password>
-        <jarsigner.storepass>TODO</jarsigner.storepass>
-        <jarsigner.keystore>/projects/myproject/workspaces/main/keystore.p12</jarsigner.keystore>
-        <gpg.keyname>your.email@address.com</gpg.keyname>
-        -->
       </properties>
     </profile>
-    <profile>
-      <!-- https://github.com/devonfw/devon4j/blob/master/documentation/guide-testing-snapshots.asciidoc -->
-      <id>devonfw-snapshots</id>
-      <activation>
-        <!--<activeByDefault>true</activeByDefault>-->
-        <activeByDefault>false</activeByDefault> 
-      </activation>
-      <repositories>
-        <repository>
-          <id>devonfw-snapshots</id>
-          <name>devonfw SNAPSHOT releases</name>
-          <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
-          <releases>
-            <enabled>false</enabled>
-            <updatePolicy>never</updatePolicy>
-            <checksumPolicy>fail</checksumPolicy>
-          </releases>
-          <snapshots>
-            <enabled>true</enabled>
-            <updatePolicy>never</updatePolicy>
-            <checksumPolicy>fail</checksumPolicy>
-          </snapshots>
-        </repository>
-      </repositories>
-    </profile>
   </profiles>
-  <activeProfiles>
-    <!--
-    <activeProfile>my-profile</activeProfile>
-    -->
-  </activeProfiles>
 </settings>
