@@ -68,13 +68,18 @@ You have to delete this folder manually as we do not want to be responsible for 
 
 == Testing SNAPSHOT releases
 
-You can find the latest IDEasy SNAPSHOT releases https://s01.oss.sonatype.org/content/repositories/snapshots/com/devonfw/tools/IDEasy/ide-cli/[here].
+Whenever a story in `IDEasy` is completed by merging a https://docs.github.com/en/github/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests[PR], our https://github.com/features/actions[github actions] will build a new SNAPSHOT release and on success deploy it to maven central portal.
+In order to install and test the latest SNAPSHOT version use the following command:
 
-Whenever a story in `IDEasy` is completed by merging a https://docs.github.com/en/github/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests[PR], our https://github.com/features/actions[github actions] will build a new SNAPSHOT release and on success deploy it to nexus on OSSRH.
-Simply choose the latest SNAPSHOT version folder and then inside that version folder the `*.tar.gz` file for the latest version and your target platform.
-Please open the download link in a new tab to make the download start properly.
-
-Once downloaded, you can proceed as with official releases (see xref:install[install]).
+```
+ide upgrade --mode=snapshot
+```
 
 If you test the latest SNAPSHOT please also give feedback to bug or feature tickets to let us know if things are working or not.
 Thanks for your testing, support and help to make IDEasy better!
+
+NOTE: After you completed your test or the next official release has been shipped please do not forget to switch back to the stable release channel.
+
+```
+ide upgrade --mode=stable
+```
