@@ -9,6 +9,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/1401[#1401]: Privacy option not working properly
 * https://github.com/devonfw/IDEasy/issues/1400[#1400]: ide --offline status does not replicate ide status behavior when offline
 * https://github.com/devonfw/IDEasy/issues/742[#742]: Produce constructive warning if git repo url is not sane
+* https://github.com/devonfw/IDEasy/issues/1297[#1297]: Migration from OSSRH to new Maven Central service
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/30?closed=1[milestone 2025.07.001].
 
